# esp_upm_phase1

./: .gitignore  CMakeLists.txt  Makefile  README.md  Task_Description___time_.xlsx  changes.txt  partition_sample.csv  sdkconfig  sdkconfig.old
components/Management/: CMakeLists.txt  readme.md
components/Management/include/: calibration.h  counters.h  dataMangement.h  featureData.h  manuCompensationLayer.h  sampleManagement.h  sensorManagement.h  sequenceManagement.h  stateMachine.h  timeManagement.h  userCompensationLayer.h
components/Management/src/: calibration.c  counters.c  dataMangement.c  featureData.c  manuCompensationLayer.c  sampleManagement.c  sensorManagement.c  sequenceManagement.c  stateMachine.c  timeManagement.c  userCompensationLayer.c
components/esp32-idf-sqlite3/: CMakeLists.txt
components/esp_upm_middleware/: CMakeLists.txt
components/esp_upm_middleware/include/: caliba.h  midFunctions.h  midTasks.h  middleware.h  middlewareTest.h
components/esp_upm_middleware/src/: caliba.c  midFunctions.c  midTasks.c  midVariable.c  middlewareTest.c
components/esp_upm_sensors/: CMakeLists.txt  bme680_c_txt  bme680_h_txt
components/esp_upm_sensors/include/: bme680.h  bmp280.h  esp_upm_sensors.h  esp_upm_variables.h  scanneri2c.h  sdp32.h  test_s.h  test_s1.h
components/esp_upm_sensors/src/: bme680.c  bmp280.c  ds3231.c  ina3221.c  scanneri2c.c  sdp32.c  test_s.c  test_s1.c
components/esp_upm_tasks/: CMakeLists.txt
components/esp_upm_tasks/include/: espupm_tasks.h
components/esp_upm_tasks/src/: espupm_tasks.c
components/lv_examples/: CMakeLists.txt  component.mk  lv_ex_conf.h
components/lv_examples/lv_examples/: lv_ex_conf_template.h  lv_examples.h
components/lv_examples/lv_examples/src/ESPUPM_SIM_01/GUI/Images/: signal_20.c
components/lv_examples/lv_examples/src/ESPUPM_SIM_01/GUI/Language/: language.c
components/lv_examples/lv_examples/src/ESPUPM_SIM_01/GUI/Screens/: Screen_metro_flowcal.c  abhai_test1.c  abhai_test1.h  screen_PIDtune.c  screen_PIDtune.h  screen_WTPrgTran.c  screen_WTPrgTran.h  screen_archive.c  screen_archive.h  screen_code.c  screen_code.h  screen_common.c  screen_common.h  screen_dashboard.c  screen_dashboard.h  screen_includes.h  screen_info.c  screen_info.h  screen_main.c  screen_main.h  screen_metro_adjust.c  screen_metro_adjust.h  screen_metro_code.c  screen_metro_code.h  screen_metro_flowadj.c  screen_metro_flowadj.h  screen_metro_flowcal.h  screen_metro_flowparameter.c  screen_metro_flowparameter.h  screen_metro_flowsetting.c  screen_metro_flowsetting.h  screen_metro_humiditysetting.c  screen_metro_humiditysetting.h  screen_metro_menu.c  screen_metro_menu.h  screen_metro_pressuresetting.c  (+27 more)
components/lv_examples/lv_examples/src/ESPUPM_SIM_01/Language/: language.c  language.h
components/lv_examples/lv_examples/src/lv_demo_widgets/: lv_demo.h  lv_demo_widgets.h  lv_demo_widgets.py  lv_demo_widgets.txt
main/: CMakeLists.txt  Kconfig.projbuild  calibration.c  controller.c  controller.h  counters.c  dataMangement.c  dataMangement.h  esp_upm.h  espupm_tasks.c  espupm_tasks.h  featureData.c  featureData.h  main.c  main.txt  manuCompensationLayer.c  midFunctions.c  midVariable.h  middleware.h  middlewareTest.c  middlewareTest.h  ota.c  ota.h  pid.c  pid.h  sampleManagement.c  sampleManagement.h  sensorManagement.c  sensorManagement.h  sensor_readtask.c  sequenceManagement.c  sequenceManagement.h  test.c  test.h  timeManagement.c  timeManagement.h  userCompensationLayer.c  userCompensationLayer.h  utils.c  utils.h  (+2 more)
main/GUI/Images/: signal_20.c  sleep_icon.c
main/GUI/Screens/: Screen_metro_flowcal.c  screen_PIDtune.c  screen_PIDtune.h  screen_archive.c  screen_archive.h  screen_common.c  screen_common.h  screen_dashboard.c  screen_dashboard.h  screen_fw_error.c  screen_fw_error.h  screen_includes.h  screen_info.c  screen_info.h  screen_main.c  screen_main.h  screen_metro_adjust.c  screen_metro_adjust.h  screen_metro_flowadj.c  screen_metro_flowadj.h  screen_metro_flowcal.h  screen_metro_flowparameter.c  screen_metro_flowparameter.h  screen_metro_flowsetting.c  screen_metro_flowsetting.h  screen_metro_humiditysetting.c  screen_metro_humiditysetting.h  screen_metro_menu.c  screen_metro_menu.h  screen_metro_pressuresetting.c  screen_metro_pressuresetting.h  screen_metro_tempsetting.c  screen_metro_tempsetting.h  screen_parameter.c  screen_parameter.h  screen_password.c  screen_password.h  screen_preset.c  screen_preset.h  screen_service.c  (+9 more)
main/GUI/Widgets/: ResumeInfoWidget.c  ResumeInfoWidget.h  sequence_widget.c  sequence_widget.h
main/GUI/custom/: custom.c  custom.h
main/fw_update/: ota.c  ota.h  wifi.c  wifi.h
main/peripherals/: bme680.c  bme680.h  bmp280.c  bmp280.h  buzzer.c  buzzer.h  ds3231.c  ds3231.h  ina3221.c  ina3221.h  motor.c  motor.h  sdp32.c  sdp32.h  ws2812.c  ws2812.h
main/sensors/: bme680.h
main/storage/: calibration.c  calibration.h  flash.c  flash.h  parameters.c  parameters.h
(+42 files in other folders)
